--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,1 +1,23 @@
-<div></div>
+<div class="np-layout-content">
+    <div class="profile-card"  mdl-shadow="2">
+        
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--3-col-tablet">
+            <img src="assets/img/avatar.jpg">   
+            </div>
+            <div class="mdl-cell mdl-cell--5-col-tablet">
+                <mdl-card>
+                </mdl-card>
+            </div>
+        </div>
+        <div class="profile-bottom np-layout-primary">
+            <ul class="social">
+                <li>
+                    <mdl-button class="mdl-button-icon">
+                        <i class="icon-bitbucket">&#xf171;</i>
+                    </mdl-button>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
