--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,9 +1,9 @@
 <div class="np-layout-content">
-    <div class="profile-card"  mdl-shadow="2">
+    <div class="profile-card container" mdl-shadow="2">
         
-        <div class="mdl-grid">
+        <div class="mdl-grid profile-card-content">
             <div class="mdl-cell mdl-cell--3-col-tablet">
-            <img src="assets/img/avatar.jpg">   
+                <img src="assets/img/avatar.jpg">
             </div>
             <div class="mdl-cell mdl-cell--5-col-tablet">
                 <mdl-card>
@@ -13,9 +13,29 @@
         <div class="profile-bottom np-layout-primary">
             <ul class="social">
                 <li>
-                    <mdl-button class="mdl-button-icon">
-                        <i class="icon-bitbucket">&#xf171;</i>
-                    </mdl-button>
+                   <button mdl-button mdl-button-type="icon">
+                        <i class="icon-github-circled socialicon white"></i>
+                    </button>
+                </li>
+                 <li>
+                    <button mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon white"></i>
+                    </button>
+                </li>
+                 <li>
+                   <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon white"></i>
+                    </button>
+                </li>
+                 <li>
+                   <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon white"></i>
+                    </button>
+                </li>
+                 <li>
+                   <button mdl-button mdl-button-type="icon">
+                        <i class="icon-behance socialicon white"></i>
+                    </button>
                 </li>
             </ul>
         </div>
