--- a/src/app/theme/sass/_socialicon.scss
+++ b/src/app/theme/sass/_socialicon.scss
@@ -60,3 +60,22 @@
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-bitbucket:before { content: '\f171'; } /* '' */
 .icon-behance:before { content: '\f1b4'; } /* '' */
+
+
+/**
+.socialicon:empty {
+  width: 1em;
+}
+*/
+
+.socialicon{
+   position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'socicon';
+  font-style: normal;
+  font-weight: $font-normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+
+}
