--- a/src/app/ui/profile/profile.component.scss
+++ b/src/app/ui/profile/profile.component.scss
@@ -13,7 +13,7 @@ body .demo-blog {
   max-width: 100%;
 
 }
-.profile-card-content{
+/**.profile-card-content{
   width: 100%;
 }
 
@@ -57,7 +57,7 @@ body .demo-blog {
 .social li button {
       width: 45px;
       height: 45px;
- }
+}
 
  @media (max-width: 767px) {
   .social li {
