--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -2,7 +2,7 @@
     <div class="profile-card container" mdl-shadow="2">
         
         <div class="mdl-grid profile-card-content">
-            <div class="mdl-cell mdl-cell--3-col-tablet">
+            <div class="mdl-cell mdl-cell--3-col-tablet profile-photo">
                 <img src="assets/img/avatar.jpg">
             </div>
             <div class="mdl-cell mdl-cell--5-col-tablet">
