--- a/src/app/ui/profile/profile.component.scss
+++ b/src/app/ui/profile/profile.component.scss
@@ -9,9 +9,45 @@ body .demo-blog {
   margin: 0 auto;
   flex-shrink: 0;
 }
+.profile-card-content{
+  padding: 57px 50px 15px 50px;
+}
+
+.profile-card .profile-photo {
+    margin-right: 10%;
+    margin-bottom: 10px;
+}
+
+.profile-photo img{
+  width: 100%;
+  display: block;
+}
+
+/*
+
 .profile-card  img{
   max-width: 100%;
 
+}
+*/
+
+
+@media (max-width: 992px) {
+  .profile-card-content {
+    padding: 50px 40px 15px 40px; 
+  }
+  .section-about .profile-photo {
+    margin-right: 0;
+    margin-bottom: 30px; 
+  } 
+}
+@media (max-width: 767px) {
+  .section-about {
+    padding-top: 0; 
+  }
+  .profile-card-content {
+      padding: 30px 20px 15px 20px; 
+  }
 }
 /**.profile-card-content{
   width: 100%;
