--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,39 +1,43 @@
 <div class="np-layout-content">
     <div class="profile-card container" mdl-shadow="2">
-        
+
         <div class="mdl-grid profile-card-content">
-            <div class="mdl-cell mdl-cell--3-col-tablet profile-photo">
+            <div class="mdl-cell mdl-cell--3-col-tablet mdl-cell--4-col profile-photo">
                 <img src="assets/img/avatar.jpg">
             </div>
-            <div class="mdl-cell mdl-cell--5-col-tablet">
-                <mdl-card>
-                </mdl-card>
+            <div class="mdl-cell mdl-cell--5-col-tablet mdl-cell--8-col">
+                <div class="profile-info">
+                    <h4 class="font-comfortaa text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
+                    <h6 class="font-open-sans text-shadow"> App developer</h6>
+                </div>
+                <div>
+                </div>
             </div>
         </div>
         <div class="profile-bottom np-layout-primary">
             <ul class="social">
                 <li>
-                   <button mdl-button mdl-button-type="icon">
+                    <button mdl-button mdl-button-type="icon">
                         <i class="icon-github-circled socialicon white"></i>
                     </button>
                 </li>
-                 <li>
+                <li>
                     <button mdl-button mdl-button-type="icon">
                         <i class="icon-bitbucket socialicon white"></i>
                     </button>
                 </li>
-                 <li>
-                   <button mdl-button mdl-button-type="icon">
+                <li>
+                    <button mdl-button mdl-button-type="icon">
                         <i class="icon-linkedin socialicon white"></i>
                     </button>
                 </li>
-                 <li>
-                   <button mdl-button mdl-button-type="icon">
+                <li>
+                    <button mdl-button mdl-button-type="icon">
                         <i class="icon-instagram socialicon white"></i>
                     </button>
                 </li>
-                 <li>
-                   <button mdl-button mdl-button-type="icon">
+                <li>
+                    <button mdl-button mdl-button-type="icon">
                         <i class="icon-behance socialicon white"></i>
                     </button>
                 </li>
