--- a/src/app/theme/sass/_font.scss
+++ b/src/app/theme/sass/_font.scss
@@ -6,8 +6,19 @@
 }
 
 .font-light{
-    font-weight: $font-light
+    font-weight: $font-light;
 }
 .font-bold{
-    font-weight: $font-bold
+    font-weight: $font-bold;
 }
+
+.font-bolder{
+    font-weight: $font-bolder;
+}
+
+.font-12{
+    font-size: $font-12;
+ }
+ .font-10{
+    font-size: $font-10;
+ }
