--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -7,8 +7,10 @@
             </div>
             <div class="mdl-cell mdl-cell--5-col-tablet mdl-cell--8-col">
                 <div class="profile-info">
-                    <h4 class="font-comfortaa text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
-                    <h6 class="font-open-sans text-shadow"> App developer</h6>
+                    <h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4>
+                    <h4 class="font-comfortaa font-bolder text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
+                    <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                    <h6 class="font-open-sans font-bold font-10">Android &middot; Website &middot; Server</h6>
                 </div>
                 <div>
                 </div>
