--- a/src/app/ui/profile/profile.component.scss
+++ b/src/app/ui/profile/profile.component.scss
@@ -34,9 +34,17 @@ body .demo-blog {
   }
 
   .profile-info{
+    color: #3d4451;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid #dedede;
+
     h4,h6{
       margin: 0;
       line-height: 1.1;
+    }
+    p{
+      font-size:10px;
     }
   }
 }
