--- a/src/app/theme/sass/_color.scss
+++ b/src/app/theme/sass/_color.scss
@@ -5,3 +5,10 @@
 .color-accent{
     color: $np-color-accent;
 }
+
+.color-blue{
+    color: unquote("rgb(#{$palette-blue-700;})");
+}
+.color-red{
+    color: unquote("rgb(#{$palette-red-A700;})");
+}
