--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -6,13 +6,30 @@
                 <img src="assets/img/avatar.jpg">
             </div>
             <div class="mdl-cell mdl-cell--5-col-tablet mdl-cell--8-col">
-                <div class="profile-info">
+                <div class="profile-info text-color-default">
                     <h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4>
                     <h4 class="font-comfortaa font-bolder text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
                     <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
                     <h6 class="font-open-sans font-bold font-10">Android &middot; Website &middot; Server</h6>
                 </div>
-                <div>
+
+                <div class="profile-detail">
+                    <p><span class="icon"><i class="material-icons color-red">email</i></span><span class="content">nirajprakash13@gmail.com</span></p>
+                    <p><span class="icon"><i class="material-icons color-blue">location_on</i></span><span class="content">Koramangala, Bangalore, India</span></p>
+                    <!--ul>
+                        <li>
+                            <span class="title"><i class="material-icons">email</i></span>
+                            <span class="content">nirajprakash13@gmail.com</span>
+                        </li>
+                        <li>
+                            <span class="title"><i class="material-icons">phone</i></span>
+                            <span class="content">+91 8217 862 643</span>
+                        </li>
+                        <li>
+                            <span class="title"><i class="material-icons">location_on</i></span>
+                            <span class="content">Koramangala, Bangalore, India</span>
+                        </li>
+                    </ul-->
                 </div>
             </div>
         </div>
@@ -45,5 +62,20 @@
                 </li>
             </ul>
         </div>
+    </div>
+
+    <div class="container" mdl-shadow="2">
+        <p>
+            <button mdl-button mdl-button-type="raised" mdl-colored="accent">
+    Download CV
+  </button>
+
+            <button mdl-button mdl-colored="primary" mdl-ripple>
+    See Portfolio
+  </button>
+        </p>
+        <hr>
+        <p></p>
+
     </div>
 </div>
