--- a/src/app/ui/profile/profile.component.scss
+++ b/src/app/ui/profile/profile.component.scss
@@ -47,25 +47,73 @@ body .demo-blog {
       font-size:10px;
     }
   }
+  .profile-detail{
+    p{
+      margin: 5px 0px 5px 0px;
+      .icon{
+        float: left;
+        font-size: 18px;
+        line-height: 1;
+      }
+      
+      .content{
+        margin-left: 10px;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 1;
+      } 
+    }
+
+  }
+  .profile-detail ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: left; 
+
+    li {
+    display: inherit;
+
+    padding: 5px 5px 5px 0px;
+    &::before{
+      display: table;
+    }
+    
+      .content{
+        display: block;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 20px;
+      } 
+    }
+
+  }
+  
 }
 
 
 @media (max-width: 992px) {
+  
+  .profile-card {
   .profile-card-content {
     padding: 50px 40px 15px 40px; 
   }
-  .profile-card .profile-photo {
+    .profile-photo {
     padding-right: 0;
     margin-bottom: 30px; 
   } 
 }
+}
 @media (max-width: 767px) {
-  .section-about {
+ .profile-card {
+   .section-about {
     padding-top: 0; 
   }
+
   .profile-card-content {
       padding: 30px 20px 15px 20px; 
   }
+ }
 }
 
 
