--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.np-padding-v-8{
+  padding: 8px 0px;
+}
+.np-margin-top-32{
+  margin-top: 32px;
+}
+
 .np-layout-primary{
     background: $np-color-primary;
 }
