--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="np-layout-content">
-    <div class="profile-card container" mdl-shadow="2">
+    <div class="profile-card" mdl-shadow="2">
 
         <div class="mdl-grid profile-card-content">
             <div class="mdl-cell mdl-cell--3-col-tablet mdl-cell--4-col profile-photo">
@@ -63,19 +63,22 @@
             </ul>
         </div>
     </div>
+    <div class="np-padding-v-8 np-margin-top-32">
+        <div class="profile-sub-card" mdl-shadow="2">
 
-    <div class="container" mdl-shadow="2">
-        <p>
-            <button mdl-button mdl-button-type="raised" mdl-colored="accent">
-    Download CV
+            <div class="profile-action font-open-sans">
+                <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
+    <span class="font-open-sans font-12">See Portfolio</span>
   </button>
 
-            <button mdl-button mdl-colored="primary" mdl-ripple>
-    See Portfolio
+                <button mdl-button mdl-colored="primary" mdl-ripple>
+    <span class="font-open-sans font-12 font-bold">Download CV</span>
   </button>
-        </p>
-        <hr>
-        <p></p>
+            </div>
+            <p class="font-open-sans font-14">Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages
+                of the development cycle for dynamic web projects. Well-versed in numerous programming languages including
+                JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
 
+        </div>
     </div>
 </div>
