--- a/src/app/theme/sass/_font.scss
+++ b/src/app/theme/sass/_font.scss
@@ -16,6 +16,16 @@
     font-weight: $font-bolder;
 }
 
+
+
+.font-18{
+    font-size: $font-18;
+ }
+
+.font-14{
+    font-size: $font-14;
+ }
+
 .font-12{
     font-size: $font-12;
  }
