--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,53 @@
-@import "theme/theme"
+.router-outlet {
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+
+
+main {
+  display: flex !important;
+  flex-direction: row;
+}
+
+.main-header .mdl-navigation__link {
+    display: inline-block;
+    height: 60px;
+    line-height: 68px;
+    background-color: transparent !important;
+    border-bottom: 4px solid transparent;
+  }
+.main-header .is-active{
+      border-bottom: 4px solid #fff;
+}
+
+.main-footer {
+  flex-grow: 1;
+}
+
+footer {
+	z-index: 1;
+  flex-shrink: 0;
+  background: #37474f;
+}
+
+.app-main-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  flex-grow: 1;
+}
+
+
+
+
+.icon svg {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+}
