--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,4 +16,4 @@ $color-accent-contrast: $color-dark-contrast;
 @import '~@angular-mdl/datepicker/datepicker';
 
 
-@import 'app/app.component.scss';
+@import 'app/theme/theme';
