--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
-<mdl-layout mdl-layout-fixed-header>
-	<mdl-layout-header>
-		<mdl-layout-header-row class="main-header">
+<mdl-layout mdl-layout-fixed-header mdl-layout-mode="waterfall">
+	<mdl-layout-header >
+		<mdl-layout-header-row class="main-header" >
 			<div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" (click)="mainLayout.toggleDrawer()">
 				<mdl-icon>&#xE5D2;</mdl-icon>
 			</div>
