--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,5 +1,6 @@
-<div class="np-layout-content">
-    <div class="profile-card" mdl-shadow="2">
+<div class="np-layout-ribbon back-color-primary"></div>
+<div class="np-layout-content np-layout-overlap-40vh">
+    <div class="profile-card back-color-white" mdl-shadow="2">
 
         <div class="mdl-grid profile-card-content">
             <div class="mdl-cell mdl-cell--3-col-tablet mdl-cell--4-col profile-photo">
