--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,8 @@ footer {
   background: #37474f;
 }
 
+/*
+
 .app-main-content {
   display: flex;
   flex-direction: column;
@@ -41,6 +43,7 @@ footer {
   align-items: stretch;
   flex-grow: 1;
 }
+*/
 
 
 
