--- a/src/app/ui/sample/sample.component.html
+++ b/src/app/ui/sample/sample.component.html
@@ -1,4 +1,4 @@
-<mdl-layout mdl-layout-fixed-header mdl-layout-header-seamed>
+<mdl-layout mdl-layout-fixed-header mdl-layout-header-seamed  mdl-layout-mode="waterfall">
   <mdl-layout-header>
     <mdl-layout-header-row>
       <mdl-layout-title>{{title}}</mdl-layout-title>
