--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -12,18 +12,20 @@ width: 100%;
  padding: 64px 32px 8px 40px;
 }
 
+  .np-container{
+    max-width: $resM;
+    width: 100%;
+  margin: 0 auto;
+  flex-shrink: 0;
+}
+
 @media screen and (max-width: $resXS) {
   .np-layout-content {
     padding: 8px 20px;
   }
 }
 
-.np-padding-v-8{
-  padding: 8px 0px;
-}
-.np-margin-top-32{
-  margin-top: 32px;
-}
+
 
 .np-layout-primary{
     background: $np-color-primary;
