adding home services

--- a/src/app/theme/sass/_socialicon.scss
+++ b/src/app/theme/sass/_socialicon.scss
@@ -60,7 +60,10 @@
 .icon-instagram:before { content: '\f16d'; } /* '' */
 .icon-bitbucket:before { content: '\f171'; } /* '' */
 .icon-behance:before { content: '\f1b4'; } /* '' */
+.icon-mobile:before { content: '\f10b'; } /* '' */
+.icon-code:before { content: '\f121'; } /* '' */
 
+.icon-server:before { content: '\f233'; } /* '' */
 
 /**
 .socialicon:empty {
