--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,60 +1,58 @@
 <div class="np-layout-ribbon back-color-primary"></div>
 <div class=" np-layout-overlap-40vh">
     <div class="np-layout-content">
-    <div class="profile np-container back-color-white" mdl-shadow="2">
+        <div class="profile np-container back-color-white" mdl-shadow="2">
 
-        <div class="mdl-grid profile-content">
+            <div class="mdl-grid profile-content">
 
-            <div class="mdl-cell mdl-cell--6-col-tablet mdl-cell--4-col">
-                <div class="profile-info text-color-dark">
-                    <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                    <h4 class="font-comfortaa font-bolder text-shadow">
-                        <!--span class="font-light">I'm </span-->Niraj Prakash</h4>
-                    <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                    <h6 class="font-open-sans font-bold font-10">Android &amp; Full Stack Developer</h6>
+                <div class="mdl-cell mdl-cell--6-col-tablet mdl-cell--4-col">
+                    <div class="profile-info text-color-dark">
+                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
+                        <h4 class="font-comfortaa font-bolder text-shadow">
+                            <!--span class="font-light">I'm </span-->Niraj Prakash</h4>
+                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                        <h6 class="font-open-sans font-bold font-10">Android &amp; Full Stack Developer</h6>
+                    </div>
                 </div>
+                <div class="profile-detail mdl-cell mdl-cell--12-col">
+
+                    <p class="text-color-default font-open-sans font-14">Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with
+                        all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
+                        languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
 
 
+                </div>
             </div>
-            <div class="profile-detail mdl-cell mdl-cell--12-col">
-
-                <p class="text-color-default font-open-sans font-14">Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all
-                    stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages
-                    including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
-
-
-            </div>
-        </div>
-        <div class="profile-bottom np-layout-primary">
-            <ul class="social">
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+            <div class="profile-bottom np-layout-primary">
+                <ul class="social">
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
                         <i class="icon-github-circled socialicon white"></i>
                     </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
                         <i class="icon-bitbucket socialicon white"></i>
                     </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
                         <i class="icon-linkedin socialicon white"></i>
                     </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
                         <i class="icon-instagram socialicon white"></i>
                     </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
+                    </li>
+                    <li>
+                        <button mdl-button mdl-button-type="icon">
                         <i class="icon-behance socialicon white"></i>
                     </button>
-                </li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </div>
     <div class="np-padding-v-8 np-margin-top-32">
 
@@ -72,7 +70,48 @@
 
     <div class="service back-color-primary">
         <div class="title">
-            
+            <h6 class="font-comfortaa text-shadow white">Services</h6>
+        </div>
+        <div class="np-container">
+            <div class="mdl-grid">
+
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block text-color-primary-light">
+                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-mobile socialicon"></i></span>
+                         <h6 class="font-comfortaa font-bolder text-shadow">
+                            <!--span class="font-light">I'm </span-->Android App Development</h6>
+                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                        <span><mdl-icon>touch_app</mdl-icon></span>
+                    </div>
+                </div>
+
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block text-color-primary-light">
+                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-code socialicon"></i></span>
+                         <h6 class="font-comfortaa font-bolder text-shadow">
+                            <!--span class="font-light">I'm </span-->Web Development</h6>
+                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                        <span><mdl-icon>touch_app</mdl-icon></span>
+                         
+                    </div>
+                </div>
+
+               
+                <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
+                    <div class="service-block text-color-primary-light">
+                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-server socialicon"></i></span>
+                         <h6 class="font-comfortaa font-bolder text-shadow">
+                            <!--span class="font-light">I'm </span-->Backend Development</h6>
+                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                        <span><mdl-icon>touch_app</mdl-icon></span>
+                         
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
