adding home services

--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="profile-detail mdl-cell mdl-cell--12-col">
 
-                    <p class="text-color-default font-open-sans font-14">Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with
+                    <p class="text-color-default font-open-sans font-14">Hello! I’m Niraj Prakash. Senior Web Developer specializing in front end development. Experienced with
                         all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
                         languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
 
@@ -78,22 +78,22 @@
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
                     <div class="service-block text-color-primary-light">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-mobile socialicon"></i></span>
-                         <h6 class="font-comfortaa font-bolder text-shadow">
+                        <span class="service-logo"><i class="icon-mobile socialicon  text-shadow"></i></span>
+                         <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Android App Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <span><mdl-icon>touch_app</mdl-icon></span>
+                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
                     <div class="service-block text-color-primary-light">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-code socialicon"></i></span>
-                         <h6 class="font-comfortaa font-bolder text-shadow">
+                        <span class="service-logo"><i class="icon-code socialicon text-shadow"></i></span>
+                         <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Web Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <span><mdl-icon>touch_app</mdl-icon></span>
+                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
                          
                     </div>
                 </div>
@@ -102,12 +102,11 @@
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
                     <div class="service-block text-color-primary-light">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-server socialicon"></i></span>
-                         <h6 class="font-comfortaa font-bolder text-shadow">
+                        <span class="service-logo"><i class="icon-server socialicon  text-shadow"></i></span>
+                         <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Backend Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <span><mdl-icon>touch_app</mdl-icon></span>
-                         
+                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
 
